# bookstore

./: Dockerfile  db.sqlite3  docker-compose.yml  fly.toml  pyproject.toml
bookstore/: settings.py  urls.py
order/: urls.py
order/migrations/: 0001_initial.py
order/serializers/: __init__.py  order_serializer.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/migrations/: 0001_initial.py  0002_rename_descripition_category_description_and_more.py  0003_rename_categories_product_category.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
